tests/trybuild/fail/multiple_std.stderr
error: multiple fields marked with #[stack_error(std)]
 --> tests/trybuild/fail/multiple_std.rs:7:5
  |
7 |     #[stack_error(std)]
  |     ^
